# scsr

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/core/: assert.hpp  core.hpp  format.hpp  io.hpp  log.hpp  object.hpp  type.hpp
engine/include/core/ds/: msqueue.hpp
engine/include/core/event/: event.hpp  format.hpp  handler.hpp
engine/include/core/math/: def.hpp  ext.hpp  format.hpp  math.hpp  matrix.hpp  quaternion.hpp  vector.hpp
engine/include/ecs/: entity.hpp  world.hpp
engine/include/graphics/: buffer.hpp  camera.hpp  gltf.hpp  image.hpp  obj_loader.hpp  pipeline.hpp  swapchain.hpp  vertex.hpp  window.hpp
engine/src/: entrypoint.cpp
engine/src/core/: format.cpp  io.cpp  object.cpp
engine/src/core/event/: format.cpp  handler.cpp
engine/src/ecs/: world.cpp
engine/src/graphics/: buffer.cpp  camera.cpp  gltf.cpp  image.cpp  pipeline.cpp  swapchain.cpp  vertex.cpp  window.cpp
runtime/: CMakeLists.txt
runtime/src/: camera.hpp  camera_controller.hpp  main.cpp  render.hpp
runtime/src/lua/: binding.cpp  binding.hpp  script.cpp  script.hpp
runtime/src/script/: lib.lua  start.lua
test/: CMakeLists.txt  event.cpp  gltf.cpp  index.cpp  math.cpp  shader.cpp
